# tgcli

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .test.env  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE.txt  MANIFEST.in  Makefile  README.md  conftest.py  dev.requirements.txt  mkdocs.yml  nfpm.yaml  pytest.ini  requirements.txt  setup.py  snapcraft.yaml
.github/: FUNDING.yml
.github/workflows/: build.linux.yml  build.macos.yml  build.windows.yml  coverage.yml  format.yml  test.linux.yml  test.macos.yml  test.windows.yml
docs/: bot.md  getting-started.md  index.md  introduction.md  practical.md  requirements.txt  root.md
resources/test/: doc.txt  video.mkv
src/: lib.rs  main.rs
src/cli/: logging.rs  mod.rs  validators.rs
src/convert/: mod.rs
src/convert/operations/: mod.rs
src/convert/operations/bot/: mod.rs
src/convert/operations/bot/send/: audio.rs  document.rs  location.rs  message.rs  mod.rs  photo.rs  poll.rs  video.rs
src/http/: mod.rs
src/http/request/: mod.rs
src/http/request/models/: mod.rs  sendaudio.rs  senddocument.rs  sendlocation.rs  sendmessage.rs  sendphoto.rs  sendpoll.rs  sendvideo.rs
src/http/response/: mod.rs
src/http/response/models/: message.rs  mod.rs
src/operations/: mod.rs
src/operations/bot/: mod.rs
src/operations/bot/send/: audio.rs  document.rs  location.rs  message.rs  mod.rs  photo.rs  poll.rs  video.rs
tests/: bot_send_audio.rs  bot_send_document.rs  bot_send_location.rs  bot_send_message.rs  bot_send_photo.rs  bot_send_poll.rs  bot_send_video.rs  fixtures.py  test_init.py
tests/cli/: bot_send.py
tests/resources/responses/: bot.TestAuthenticationRequest.1.json  bot.TestAuthenticationRequest.2.json  bot.TestSendMessageRequest.1.json
tests/test_cli/: __init__.py  test_bot_send.py
tests/test_request/: __init__.py  test_bot.py
tgcli/: __init__.py  cli.py
tgcli/cli/: __init__.py  validation.py
tgcli/cli/bot/: __init__.py  send.py
tgcli/request/: bot.py
tgcli/request/bot/: __init__.py  send.py
