[package]
name = "tgcli"
version = "0.5.0-alpha.2"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2018"
description = "A Telegram Terminal Application"

[dependencies]
clap = "2.33.3"
fern = "0.6.0"
log = "0.4.14"
mime = "0.3.16"
mime_guess = "2.0.3"
shellexpand = "2.1.0"
url = "2.2.2"

[dependencies.reqwest]
version = "0.11.6"
features = ["blocking", "multipart", "json"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.2"
dotenv = "0.15.0"
rstest = "0.11.0"
