[package]
name = "tgcli"
version = "0.5.0-alpha.6"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2021"
description = "A Telegram Terminal Application"

[dependencies]
clap = "2.33.3"
log = "0.4.14"
mime = "0.3.16"
mime_guess = "2.0.3"
shellexpand = "2.1.0"
url = "2.2.2"
serde_json = "1.0.71"
async-trait = "0.1.51"
tokio-util = "0.6.9"
futures = "0.3.18"

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.reqwest]
version = "0.11.6"
features = ["multipart", "json", "stream", "blocking"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dependencies.tokio]
version = "1.14.0"
features = ["full"]

[dev-dependencies]
assert_cmd = "2.0.2"
dotenv = "0.15.0"
rstest = "0.11.0"
