[package]
name = "tgcli"
version = "0.5.1-alpha.1"
authors = ["Eray Erdin <eraygezer.94@gmail.com>"]
edition = "2021"
description = "A Telegram Terminal Application"
license = "MPL-2.0"

[dependencies]
log = "0.4.14"
mime = "0.3.16"
mime_guess = "2.0.3"
url = "2.2.2"
serde_json = "1.0.71"

[dependencies.clap]
version = "4.1.6"
features = ["derive", "env"]

[dependencies.fern]
version = "0.6.0"
features = ["colored"]

[dependencies.reqwest]
version = "0.11.6"
features = ["multipart", "json", "blocking"]

[dependencies.serde]
version = "1.0.130"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0.2"
dotenv = "0.15.0"
rstest = "0.16.0"
